--- a/pom.xml
+++ b/pom.xml
@@ -59,10 +59,8 @@
 					</execution>
 				</executions>
 				<configuration>
-					<Require-Bundle>
-						com.dscsag.plm-api; bundle-version=[0,)
-					</Require-Bundle>
 					<instructions>
+						<_consumer-policy>$${range;[===,=+)}</_consumer-policy>
 						<Bundle-Activator>${bundle.activator}</Bundle-Activator>
 						<Bundle-SymbolicName>${project.groupId}.${project.artifactId};singleton:=true</Bundle-SymbolicName>
 						<Import-Package>${bundle.import-packages}*</Import-Package>
